# pictor

./: .gitignore  Cargo.toml
pictor/: Cargo.toml
pictor-core/: Cargo.toml  LICENCE  README.md
pictor-core/src/: lib.rs
pictor-core/src/codecs/: color_type.rs  mod.rs
pictor-core/src/codecs/png/: filters.rs  mod.rs
pictor-core/src/codecs/qoi/: color_type.rs  mod.rs  tags.rs
pictor-read/: Cargo.toml
pictor-read/src/codecs/: mod.rs
pictor-read/src/codecs/qoi/: mod.rs
pictor-write/: Cargo.toml
pictor-write/src/: lib.rs
pictor-write/src/codecs/: mod.rs
pictor-write/src/codecs/jpeg/: mod.rs  tables.rs
pictor-write/src/codecs/png/: deflate.rs  filter.rs  mod.rs
pictor-write/src/codecs/qoi/: color_type.rs  mod.rs
pictor/src/: lib.rs
